<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.MainActivity"
    android:weightSum="6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="4"
        >

        <!--<LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="3"
            >

            <Button
                android:id="@+id/button_historic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/historic_button"
                android:layout_marginTop="46dp"
                android:layout_marginHorizontal="14dp"
                android:text="@string/historic"
                android:textColor="#FFFFFF"
                android:layout_weight="1"
                />

        </LinearLayout>-->

        <TextView
            android:id="@+id/text_visor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/text_view_border"
            android:padding="16dp"
            android:text="0"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="5dp"
            android:maxLines="1"
            android:layout_weight="3"
            android:gravity="bottom|end"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3"
        android:weightSum="3"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="4"
            >

            <Button
                android:id="@+id/button_c"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/erasing_button"
                android:text="@string/clear"
                android:textColor="#FFFFFF"
                />

            <Button
                android:id="@+id/button_delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/erasing_button"
                android:text="@string/delete"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_divider"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/functionality_button"
                android:tag="/"
                android:text="@string/divide"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_multiplier"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/functionality_button"
                android:tag="*"
                android:text="@string/multiplier"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="4"
            >

            <Button
                android:id="@+id/button_7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numerical_button"
                android:tag="@string/_7"
                android:text="@string/_7"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numerical_button"
                android:tag="@string/_8"
                android:text="@string/_8"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numerical_button"
                android:tag="@string/_9"
                android:text="@string/_9"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_subtraction"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/functionality_button"
                android:tag="-"
                android:text="@string/minus"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="4"
            >

            <Button
                android:id="@+id/button_4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numerical_button"
                android:tag="@string/_4"
                android:text="@string/_4"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numerical_button"
                android:tag="@string/_5"
                android:text="@string/_5"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numerical_button"
                android:tag="@string/_6"
                android:text="@string/_6"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_addiction"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/functionality_button"
                android:tag="+"
                android:text="@string/plus"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:weightSum="4"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2"
            android:weightSum="2"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="2"
                >

                <Button
                    android:id="@+id/button_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/numerical_button"
                    android:tag="@string/_1"
                    android:text="@string/_1"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/button_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/numerical_button"
                    android:tag="@string/_2"
                    android:text="@string/_2"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:weightSum="2"
                >

                <Button
                    android:id="@+id/button_0"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@drawable/numerical_button"
                    android:tag="@string/_0"
                    android:text="@string/_0"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="2"
            >

            <Button
                android:id="@+id/button_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numerical_button"
                android:tag="@string/_3"
                android:text="@string/_3"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button_dot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/numerical_button"
                android:text="@string/dot"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="2"
            >

            <Button
                android:id="@+id/button_equals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/functionality_button"
                android:text="@string/equal"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>